modification au niveu de controlleur getProfile
