# server/controllers/profilCtrl.js
@@ -13,13 +13,15 @@ const ErrorResponse = require("../utils/error");
  */
 const AddProfile = async (req,res,next)=>{
     try {
-        const {adresse, telephone, date_de_naissance} = req.body;
-        if(!adresse || !telephone || !date_de_naissance)  return next(new ErrorResponse("Fill all filled", 401));
+        const {adresse, telephone, date_de_naissance,bisness_unit,poste} = req.body;
+        if(!adresse || !telephone || !date_de_naissance || !bisness_unit || !poste)  return next(new ErrorResponse("Fill all filled", 401));
         const user_id = req.user.id;
         const createProfile = await Profile.create({
         adresse : adresse,
         telephone : telephone,
         date_de_naissance :date_de_naissance,
+        poste:poste,
+        bisness_unit: bisness_unit,
         user: user_id
         });
         if(!createProfile)  return next(new ErrorResponse("Profile no create ", 401));
@@ -33,8 +35,8 @@ const AddProfile = async (req,res,next)=>{
 
 const UpdateProfile = async(req, res, next)=> {
     try {
-        const {adresse, telephone, date_de_naissance} = req.body;
-        if(!adresse || !telephone || !date_de_naissance)  return next(new ErrorResponse("Fill all filled", 401));
+        const {adresse, telephone, date_de_naissance,bisness_unit,poste} = req.body;
+        if(!adresse || !telephone || !date_de_naissance || !bisness_unit || !poste)  return next(new ErrorResponse("Fill all filled", 401));
         const user_id = req.user.id;
         const findProfile = await Profile.findOne({
             where : {
@@ -46,7 +48,8 @@ const UpdateProfile = async(req, res, next)=> {
             adresse : adresse,
             telephone : telephone,
             date_de_naissance :date_de_naissance,
-            user: user_id
+            poste:poste,
+            bisness_unit: bisness_unit,
         },
         {
             where : {
@@ -60,8 +63,26 @@ const UpdateProfile = async(req, res, next)=> {
     } catch (error) {
         return next(new ErrorResponse(error, 500));
     }
-}   
+}  
+
+const getMyProfile = async (req, res, next) =>{
+    try {
+        const user_id = req.user.id;
+        const findMyProfile = await Profile.findOne({
+            where: { user: user_id },
+            attributes: { exclude: ['user'] }
+          });
+        if(!findMyProfile) return next(new ErrorResponse("profil not found", 404));
+        res.json({
+            message : 'my profile : ',
+            findMyProfile
+        })
+    } catch (error) {
+        
+    }
+}
 module.exports = {
     AddProfile,
-    UpdateProfile
+    UpdateProfile,
+    getMyProfile
 }
