# server/models/Profil.js
@@ -4,18 +4,24 @@ const sequelize = require('../config/database')
 
 const Profile = sequelize.define("Profile", {
     adresse: {
-      type: Sequelize.STRING,
+        type: Sequelize.STRING,
     },
     telephone: {
-      type: Sequelize.STRING,
-    },   
+        type: Sequelize.STRING,
+    },
     date_de_naissance: {
-      type: Sequelize.DATE,
+        type: Sequelize.DATE,
     },
     user: {
-        type : Sequelize.INTEGER
-    }
+        type: Sequelize.INTEGER
+    },
+    poste: {
+        type: Sequelize.STRING,
+    },
+    bisness_unit: {
+        type: Sequelize.STRING,
+    },
 
-  });
-  
-  module.exports = Profile;
+});
+
+module.exports = Profile;
