# server/swagger.json
@@ -984,6 +984,12 @@
                 },
                 "date_de_naissance": {
                   "example": "any"
+                },
+                "bisness_unit": {
+                  "example": "any"
+                },
+                "poste": {
+                  "example": "any"
                 }
               }
             }
@@ -1014,11 +1020,28 @@
                 },
                 "date_de_naissance": {
                   "example": "any"
+                },
+                "bisness_unit": {
+                  "example": "any"
+                },
+                "poste": {
+                  "example": "any"
                 }
               }
             }
           }
         ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/profile/my": {
+      "get": {
+        "description": "",
+        "parameters": [],
         "responses": {
           "200": {
             "description": "OK"
